test/zinc_source/compile_errors/callables/01_lambda_capture.zn
// expected-error: lambda expressions cannot capture outer variable 'x'
fn main() {
    x = 1
    f = fn() {
        return x
    }
    print(f())
}
